modules/gdscript/tests/scripts/analyzer/errors/nullable_assignment_to_non_nullable.gd
func test():
    var foo: Array[int]? = [1, 2]
    var bar: Array[int] = foo